--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,16 +1,12 @@
-# Сборка Vue
+# Stage 1: Сборка фронтенда
 FROM node:20-alpine AS build
-
 WORKDIR /app
 COPY package*.json ./
 RUN npm install
 COPY . .
 RUN npm run build
 
-# Продакшен с Caddy
-FROM caddy:alpine
-
-COPY --from=build /app/dist /usr/share/caddy
-COPY Caddyfile /etc/caddy-custom/Caddyfile
-
-CMD ["caddy", "run", "--config", "/etc/caddy-custom/Caddyfile", "--adapter", "caddyfile"]
+# Stage 2: Подготовка статических файлов
+FROM alpine AS static-export
+WORKDIR /srv/frontend
+COPY --from=build /app/dist ./
