--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,8 +23,9 @@ services:
     ports:
       - "80:80"
       - "443:443"
+    command: ["caddy", "run", "--config", "/etc/caddy-prod/Caddyfile", "--adapter", "caddyfile"]
     volumes:
-      - ./Caddyfile:/etc/caddy/Caddyfile:ro
+      - ./Caddyfile.prod:/etc/caddy-prod/Caddyfile:ro
       - caddy_data:/data
       - caddy_config:/config
       - frontend_data:/srv/frontend
